Bug 1961031 - make unloaded tab icons more visible for dark themes r=desktop-theme-reviewers,tabbrowser-reviewers,dao,emilio
Differential Revision: https://phabricator.services.mozilla.com/D246761

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -464,6 +464,9 @@
   @media -moz-pref("browser.tabs.fadeOutUnloadedTabs") {
     &[pending] {
       filter: grayscale(100%);
+      @media (prefers-color-scheme: dark) {
+        filter: grayscale(100%) invert();
+      }
       opacity: 0.5;
       /* Fade the favicon out */
       transition-property: filter, opacity;
@@ -481,6 +484,9 @@
   @media -moz-pref("browser.tabs.fadeOutExplicitlyUnloadedTabs") {
     &[pending][discarded] {
       filter: grayscale(100%);
+      @media (prefers-color-scheme: dark) {
+        filter: grayscale(100%) invert();
+      }
       opacity: 0.5;
       /* Fade the favicon out */
       transition-property: filter, opacity;
